<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="7dp"
        android:fontFamily="serif-monospace"
        android:text="TOAST"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="Toast" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="25dp"
        android:text="@string/gui_txt"
        android:textSize="12sp"
        tools:text="@string/gui_txt" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView15"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-14dp"
        android:layout_marginTop="96dp"
        android:fontFamily="serif-monospace"
        android:text="DATEPICKER"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="DatePicker" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView14"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="124dp"
        android:text="@string/DatePicker"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView17"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="139dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="540dp"
        android:fontFamily="serif-monospace"
        android:text="IMAGEVIEW"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="ImageView" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="387dp"
        android:layout_height="33dp"
        android:layout_alignStart="@+id/textView14"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="14dp"
        android:text="@string/ImageView"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="264dp"
        android:fontFamily="serif-monospace"
        android:text="SPINNER"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="Spinner" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="385dp"
        android:layout_height="63dp"
        android:layout_alignStart="@+id/textView17"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="297dp"
        android:layout_marginEnd="15dp"
        android:text="@string/Spinner"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView21"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="142dp"
        android:layout_marginTop="370dp"
        android:fontFamily="serif-monospace"
        android:text="EDITTEXT"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView22"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-134dp"
        android:layout_marginTop="385dp"
        android:layout_marginEnd="18dp"
        android:text="@string/EditText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView15"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="215dp"
        android:fontFamily="serif-monospace"
        android:text="BUTTON"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="Button" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="372dp"
        android:layout_height="44dp"
        android:layout_alignStart="@+id/textView15"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-131dp"
        android:layout_marginBottom="153dp"
        android:text="@string/Button"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView15"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-17dp"
        android:layout_marginBottom="105dp"
        android:fontFamily="serif-monospace"
        android:text="NUMBERPICKER"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="NumberPicker" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView15"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="44dp"
        android:text="@string/NumberPicker"
        android:textSize="12sp" />

</RelativeLayout>